--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -23,13 +23,31 @@
   border: none;
   width: 300px;
 }
+.field select,
+option {
+  height: 32px;
+  border-radius: 4px;
+  border: none;
+  width: 300px;
+}
 .contact {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 32px;
 }
-.map {
+.button {
+  font-size: 18px;
+  color: #fff;
+  /* font-weight: 700; */
+  background-color: var(--primary);
+  /* padding: 8px 12px; */
+  /* display: block; */
+  width: 200px;
+  padding: 12px;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
 }
 @media screen and (min-width: 800px) {
   .container {
@@ -58,7 +76,7 @@
     width: 300px;
   }
   .contact {
-      all: unset;
+    all: unset;
     display: flex;
     gap: 32px;
   }
